# buchida-python

./: .gitignore  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
src/buchida/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py
