[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buchida"
version = "0.1.0"
description = "Official Python SDK for buchida email API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "buchida", email = "hello@buchida.com" }]
keywords = ["email", "api", "buchida", "cjk", "smtp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://buchida.com"
Repository = "https://github.com/Vyblor/buchida-python"

[tool.hatch.build.targets.wheel]
packages = ["src/buchida"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
